--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 {% for post in blog_posts %}
-    <article class="post">
-        <h1>{{post.title}}</h1>
-        <small>{{post.date}}</small>
-        <p>{{post.content}}</p>
-    </article>
+<article class="blog-post">
+    <div class="tekst">
+        <h1 class='titel'>{{post.title}}</h1>
+        <p class="datum">  {{post.date}}</p>
+        <p class="inhoud">{{post.content}}</p>
+    </div>
+</article>
 {% endfor %}
-{% endblock content %} 
+{% endblock content %}
