--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,8 @@
         }
     </script>
     <meta charset="UTF-8">
+    <meta name="apple-mobile-web-app-status-bar-style" content="yes">
+    <meta name="theme-color" content="#bec2bf">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='forms.css') }}">
