--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,6 +38,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="static/images/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="144x144" href="static/images/icons/android-icon-144x144.png"
     <link rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -103,6 +104,8 @@
             <i class='fab fa-instagram'></i>
         </footer>
     </div>
+    {% block scripts %}
+    {% endblock %}
     <script>
         function myFunction() {
             var x = document.getElementById("mobile-links");
@@ -113,7 +116,6 @@
             }
         }
     </script>
-    <script src="/script.js" defer></script>
 </body>
 
 </html>
