--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script>
+    <!-- <script>
         if ("serviceWorker" in navigator) {
             window.addEventListener("load", function () {
                 navigator.serviceWorker.register("/sw.js").then(
@@ -16,7 +16,7 @@
                 });
         });
         }
-    </script>
+    </script> -->
     <meta charset="UTF-8">
     <meta name="theme-color" content="#bec2bf">
     <meta name="apple-mobile-web-app-status-bar-style" content="yes">
