--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-    <!-- <script>
+    <script>
         if ("serviceWorker" in navigator) {
             window.addEventListener("load", function () {
                 navigator.serviceWorker.register("/sw.js").then(
-              function (registration) {
+                    function (registration) {
                         // Registration was successful
                         console.log("ServiceWorker registration successful with scope: ", registration.scope);
-            },
-                function (err) {
-                    // registration failed :( 
-                    console.log("ServiceWorker registration failed: ", err);
-                });
-        });
+                    },
+                    function (err) {
+                        // registration failed :( 
+                        console.log("ServiceWorker registration failed: ", err);
+                    });
+            });
         }
-    </script> -->
+    </script>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#bec2bf">
     <meta name="apple-mobile-web-app-status-bar-style" content="yes">
@@ -38,8 +38,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="static/images/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/icons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="144x144" href="static/images/icons/android-icon-144x144.png"
-    <link rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
+    <link rel="icon" type="image/png" sizes="144x144" href="static/images/icons/android-icon-144x144.png" <link
+        rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
