--- a/templates/photos.html
+++ b/templates/photos.html
@@ -19,5 +19,5 @@
 {% endblock content %}
 
 {% block scripts %}
-<script src="{{url_for('static', filename='app.js')}}"></script>
+<script src="{{url_for('static', filename='photo.js')}}"></script>
 {% endblock scripts%}
