--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="static/images/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/icons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="144x144" href="static/images/icons/android-icon-144x144.png"
-        rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
+    <link rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
