Added photo galery

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -100,8 +100,8 @@
         </div>
         <footer id='footer'>
             Arne De Veylder 2020 | <a href="mailto:arne.de.veylder@telenet.be"><i class='fas fa-envelope'></i></a>
-            <i class='fab fa-facebook-messenger'></i>
-            <i class='fab fa-instagram'></i>
+            <a href="http://m.me/arne.de.veyder"><i class='fab fa-facebook-messenger'></i></a>
+            <a href="https://www.instagram.com/arne.deveylder/"><i class='fab fa-instagram'></i></a>
         </footer>
     </div>
     {% block scripts %}
