--- a/templates/photos.html
+++ b/templates/photos.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="photo-container">
-    <h1 class="photo-titel">Quiz Project</h1>
+    <h1 class="photo-titel">Foto test</h1>
     <div class="galery">
         <!-- Todo For loop die loopt over alle foto's voor dit album  -->
         {% for photo in photos %}
