--- a/templates/register.html
+++ b/templates/register.html
@@ -6,22 +6,62 @@
             <fieldset>
                 <legend>Registreer</legend>
                 <div>
-                    <!-- Todo layout -->
                     {{ form.username.label(class="form-label")}}
-                    {{ form.username(class="form-group")}}
+
+                    {% if form.username.errors%}
+                        {{ form.username(class="form-group is-invalid")}}
+                        <div class="invalid-text">
+                            {% for error in form.username.errors %}
+                            <p class="invalid-text">{{error}}</p>
+                            {% endfor%}
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-group")}}
+                    {% endif %}
                 </div>
+
                 <div>
                     {{ form.email.label(class="form-label")}}
+                    {% if form.email.errors%}
+                    {{ form.email(class="form-group is-invalid")}}
+                    <div class="invalid-text">
+                        {% for error in form.email.errors %}
+                        <p class="invalid-text">{{error}}</p>
+                        {% endfor%}
+                    </div>
+                {% else %}
                     {{ form.email(class="form-group")}}
+                {% endif %}
                 </div>
+
                 <div>
                     {{ form.password.label(class="form-label") }}
+                    {% if form.password.errors%}
+                    {{ form.password(class="form-group is-invalid")}}
+                    <div class="invalid-text">
+                        {% for error in form.password.errors %}
+                        <p class="invalid-text">{{error}}</p>
+                        {% endfor%}
+                    </div>
+                {% else %}
                     {{ form.password(class="form-group")}}
+                {% endif %}
                 </div>
+
                 <div>
                     {{ form.confirm_password.label(class="form-label")}}
-                    {{ form.confirm_password(class="form-group")}}
+                    {% if form.confirm_password.errors%}
+                        {{ form.confirm_password(class="form-group is-invalid")}}
+                        <div class="invalid-text">
+                            {% for error in form.confirm_password.errors %}
+                            <p class="invalid-text">{{error}}</p>
+                            {% endfor%}
+                        </div>
+                    {% else %}
+                        {{ form.confirm_password(class="form-group")}}
+                    {% endif %}
                 </div>
+
             </fieldset>
             <div>
                 {{ form.submit(class="button") }}
