--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Icons en styling, letertype, ... -->
-    <link rel="icon" href="{{url_for('static', filename='/images/icons/favicon.ico')}}">
+    <link rel="icon" href="static/images/icons/favicon.ico">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='forms.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
