Added About page

--- a/Flask_App/templates/layout.html
+++ b/Flask_App/templates/layout.html
@@ -43,11 +43,14 @@
     <div id="container-page">
         <div id="content-page">
             <header>
-                <div class="logo">ArneDeV</div>
+                <div class="logo"><a href="{{url_for('home')}}">ArneDeV</a></div>
                 <nav>
                     <ul class="nav_links desktop">
                         <li>
                             <a href="{{url_for('home')}}"> Home </a>
+                        </li>
+                        <li>
+                            <a href="{{url_for('about')}}"> About </a>
                         </li>
                         <li>
                             <a href="{{url_for('photos')}}"> Foto's </a>
@@ -70,7 +73,10 @@
             <div id="mobile-links">
                 <ul class="mobile m-link">
                     <li>
-                        <a href="/"> Home </a>
+                        <a href="{{url_for('home')}}"> Home </a>
+                    </li>
+                    <li>
+                        <a href="{{url_for('about')}}"> About </a>
                     </li>
                     <li>
                         <a href="{{url_for('photos')}}"> Foto's </a>
